--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json & tsc -p tsconfig-cjs.json",
     "lint": "eslint ./src",
     "dev": "nodemon"
   },
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@types/bluebird": "^3.5.38",
+    "@types/bson": "^4.2.0",
     "@types/redis": "2.8.28",
     "eslint": "^8.32.0",
     "nodemon": "^2.0.20",
@@ -29,13 +30,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/mongodb": "^3.6.10",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "axios": "^1.2.2",
     "bluebird": "^3.7.2",
-    "mongodb": "^3.6.5",
     "pino": "^8.8.0",
     "redis": "^3.1.2",
     "standard": "^17.0.0"
